# python-mcp-server-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ruff.yml
server/: main.py
