[project]
name = "python-mcp-server-template"
version = "0.1.0"
description = "A minimal Python MCP Server template using the Model Context Protocol SDK"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.5.0",
]


[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server/"]

[tool.ruff]
lint.select = ["E", "F", "B", "I", "PL"]
line-length = 100
target-version = "py313"
